[gd_scene load_steps=15 format=3 uid="uid://dkfy3y2orda1t"]

[ext_resource type="Script" uid="uid://dldp6b70n8ccj" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://yp3oyehyqa4a" path="res://scenes/dino.tscn" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://dr1872ok4d46m" path="res://scenes/data_manager.tscn" id="3_dinhu"]
[ext_resource type="Script" uid="uid://bed13xsg2p3j6" path="res://scripts/stats.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://c7g8310sk5fnh" path="res://scripts/pixel_art_manager.gd" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://dhgao3k34766f" path="res://scenes/options_menu.tscn" id="4_kvuet"]
[ext_resource type="PackedScene" uid="uid://c24yr7xx7bwps" path="res://scenes/island.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://cf6u8mc1ko724" path="res://scenes/space.tscn" id="4_vtaks"]
[ext_resource type="Texture2D" uid="uid://u86veet8lfqs" path="res://assets/sprites/stego.png" id="6_gee14"]
[ext_resource type="PackedScene" uid="uid://58q7a2w4p7g1" path="res://scenes/meteorite.tscn" id="6_vtaks"]
[ext_resource type="Script" uid="uid://ivxruahk22dp" path="res://scripts/dino_buttons.gd" id="8_0tnpc"]
[ext_resource type="FontFile" uid="uid://m4cqhajh3qxk" path="res://assets/fonts/Tiny5/Tiny5-Regular.ttf" id="9_0tnpc"]
[ext_resource type="PackedScene" uid="uid://dh1odu7gvadb0" path="res://scenes/fade_transition.tscn" id="11_kvpfn"]

[sub_resource type="QuadMesh" id="QuadMesh_gee14"]

[node name="Game" type="Node3D"]
script = ExtResource("1_yqjtg")
stego_scene = ExtResource("2_iywne")
metadata/_edit_horizontal_guides_ = [-406.0]

[node name="DataManager" parent="." instance=ExtResource("3_dinhu")]

[node name="PixelArtManager" type="Node" parent="." node_paths=PackedStringArray("lighting_node")]
script = ExtResource("3_p57ef")
pixel_node_paths = [NodePath("../Scenery/Island"), NodePath("../Scenery/Meteorite")]
lighting_node = NodePath("../Lighting/DirectionalLight3D")

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 10, 50)

[node name="Scenery" type="Node" parent="."]

[node name="Space" parent="Scenery" instance=ExtResource("4_vtaks")]
transform = Transform3D(1, 0, 0, 0, 0.17364822, -0.9848077, 0, 0.9848077, 0.17364822, 0, 0, -100)

[node name="Island" parent="Scenery" groups=["island"] instance=ExtResource("4_lbhrr")]

[node name="Meteorite" parent="Scenery" instance=ExtResource("6_vtaks")]
transform = Transform3D(0.86138994, 0, 0.50794446, 0, 1, 0, -0.50794446, 0, 0.86138994, -25.434372, 15.710167, -18.7094)

[node name="ControlLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Stats" type="VBoxContainer" parent="ControlLayer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("3_lnu2h")

[node name="StatsBackground" type="Panel" parent="ControlLayer/Stats"]
modulate = Color(0.9951927, 0.9771926, 0.98284966, 1)
self_modulate = Color(11.84926, 6.0036535, 8.750384, 0.4117647)
layout_mode = 2
size_flags_vertical = 3

[node name="TimerLabel" type="Label" parent="ControlLayer/Stats/StatsBackground"]
layout_mode = 0
offset_left = 1079.0
offset_top = 34.0
offset_right = 1869.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0.975779, 0.6065958, 0.3196563, 1)
theme_override_fonts/font = ExtResource("9_0tnpc")
theme_override_font_sizes/font_size = 40
text = "60s before crash | 10 stomps per/s to add time"

[node name="StompLabel" type="Label" parent="ControlLayer/Stats/StatsBackground"]
layout_mode = 0
offset_left = 100.0
offset_top = 30.0
offset_right = 393.0
offset_bottom = 78.0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("9_0tnpc")
theme_override_font_sizes/font_size = 40
text = "0 stomps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FruitsLabel" type="Label" parent="ControlLayer/Stats/StatsBackground"]
layout_mode = 0
offset_left = 700.0
offset_top = 30.0
offset_right = 825.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("9_0tnpc")
theme_override_font_sizes/font_size = 40
text = "0 fruits"

[node name="AddedTimeLabel" type="Label" parent="ControlLayer/Stats/StatsBackground"]
visible = false
layout_mode = 0
offset_left = 1001.0
offset_top = 34.0
offset_right = 1056.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0.50662, 0.82022494, 0.26477304, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_0tnpc")
theme_override_font_sizes/font_size = 40
text = "+0"

[node name="DinoButtons" type="VBoxContainer" parent="ControlLayer"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 170.0
grow_vertical = 2
alignment = 1
script = ExtResource("8_0tnpc")

[node name="StegoButton" type="TextureButton" parent="ControlLayer/DinoButtons"]
clip_contents = true
custom_minimum_size = Vector2(170, 180)
layout_mode = 2
ignore_texture_size = true

[node name="Background" type="MeshInstance2D" parent="ControlLayer/DinoButtons/StegoButton"]
self_modulate = Color(0.44694465, 0.25272858, 0.4243774, 0.3254902)
show_behind_parent = true
position = Vector2(85, 90)
scale = Vector2(170, 180)
mesh = SubResource("QuadMesh_gee14")

[node name="NameTag" type="Label" parent="ControlLayer/DinoButtons/StegoButton"]
texture_filter = 1
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 220.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("9_0tnpc")
theme_override_font_sizes/font_size = 30
text = "Stegosaurus
"

[node name="CostTag" type="Label" parent="ControlLayer/DinoButtons/StegoButton"]
texture_filter = 1
layout_mode = 0
offset_left = 5.0
offset_top = 147.0
offset_right = 192.00006
offset_bottom = 220.0
theme_override_fonts/font = ExtResource("9_0tnpc")
theme_override_font_sizes/font_size = 30
text = "Cost : 
"

[node name="StegoImage" type="Sprite2D" parent="ControlLayer/DinoButtons/StegoButton"]
position = Vector2(84.99999, 90.99999)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_gee14")

[node name="Button" type="Button" parent="ControlLayer"]
layout_mode = 0
offset_left = 30.0
offset_top = 21.0
offset_right = 145.0
offset_bottom = 80.0
text = "Options
"

[node name="Lighting" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 0.78032124, 0.6253789, 0, -0.6253789, 0.78032124, 0, 17.028296, 37.33609)

[node name="FadeTransition" parent="." instance=ExtResource("11_kvpfn")]
visible = false

[node name="FadeTimer" type="Timer" parent="FadeTransition"]

[node name="GameOverTimer" type="Timer" parent="FadeTransition"]
wait_time = 0.9

[node name="OptionsMenu" parent="." instance=ExtResource("4_kvuet")]
visible = false

[connection signal="fruits_change" from="." to="ControlLayer/Stats" method="_on_game_fruits_change"]
[connection signal="island_clicked" from="." to="." method="_on_island_clicked"]
[connection signal="island_clicked" from="." to="Scenery/Island" method="_on_game_island_clicked"]
[connection signal="remove_all_dinos" from="." to="." method="_on_remove_all_dinos"]
[connection signal="reset_data" from="." to="." method="_on_reset_data"]
[connection signal="restart_game" from="." to="." method="_on_restart_game"]
[connection signal="stego_purchased" from="." to="." method="_on_stego_purchased"]
[connection signal="stego_purchased" from="." to="ControlLayer/DinoButtons" method="_on_game_stego_purchased"]
[connection signal="stomps_change" from="." to="ControlLayer/Stats" method="_on_game_stomps_change"]
[connection signal="reset_data" from="DataManager" to="DataManager" method="_on_reset_data"]
[connection signal="update_timer_tag" from="DataManager" to="ControlLayer/Stats" method="_on_data_manager_update_timer_tag"]
[connection signal="game_over" from="Scenery/Meteorite" to="." method="_on_meteorite_game_over"]
[connection signal="update_timer_tag" from="Scenery/Meteorite" to="ControlLayer/Stats" method="_on_data_manager_update_timer_tag"]
[connection signal="button_down" from="ControlLayer/DinoButtons/StegoButton" to="." method="_on_stego_button_button_down"]
[connection signal="button_down" from="ControlLayer/Button" to="OptionsMenu" method="_on_button_button_down"]
[connection signal="timeout" from="FadeTransition/FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="FadeTransition/GameOverTimer" to="." method="_on_game_over_timer_timeout"]
